fix: Don't hide menu behind OS bar

--- a/src/Rcl/Views/Layout/MainLayout.razor.css
+++ b/src/Rcl/Views/Layout/MainLayout.razor.css
@@ -1,3 +1,7 @@
 .mud-main-content {
   min-height: calc(100vh - var(--mud-appbar-height));
 }
+
+.top-app-bar {
+  padding-top: 20px;
+}
